[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/fantasma-placeholder.png" type="Texture" id=1]
[ext_resource path="res://scripts/Fantasma.gd" type="Script" id=2]
[ext_resource path="res://scenes/HurtBoxTiro.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 19 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.0416

[node name="Fantasma" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 1, -2 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -2 )
shape = SubResource( 2 )

[node name="TimerKnock" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TimerGhostMode" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TimerKnock" to="." method="_on_TimerKnock_timeout"]
[connection signal="timeout" from="TimerGhostMode" to="." method="_on_TimerGhostMode_timeout"]

[editable path="HurtBox"]
